--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li class="nav-item"><a class="nav-link" href="#services">services</a></li>
                     <li class="nav-item"><a class="nav-link" href="#products">products</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact us</a></li>
-                    <li class="nav-item"><button class="btn btn-primary" data-bss-hover-animate="pulse" type="button" style="background: rgb(254,182,72);">Call us</button></li>
+                    <li class="nav-item"><a class="btn btn-primary" role="button" data-bss-hover-animate="pulse" style="background: rgb(254,182,72);" href="tel:7318802424">Call us</a></li>
                 </ul>
             </div>
         </div>
@@ -126,7 +126,7 @@
                             <div class="col-12">
                                 <p class="product-description">Elevate your morning ritual or unwind with an evening brew in our exquisitely crafted coffee mug. At 99 Store, we believe that your daily moments of indulgence should be accompanied by a touch of elegance and style. Our Signature Coffee Mug is designed to bring joy to your every sip.</p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">VISIT OUR STORE</button></div>
+                                    <div class="col-6"><a class="btn btn-light" role="button" data-bss-hover-animate="flash" href="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" data-bs-target="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" target="_blank" style="background: rgb(254,182,72);color: var(--bs-btn-bg);">vISIT OUR STORE</a></div>
                                     <div class="col-6">
                                         <p class="product-price">₹99.00</p>
                                     </div>
@@ -149,7 +149,7 @@
                             <div class="col-12">
                                 <p class="product-description">Add a touch of everlasting elegance to your home or office with our stunning Artificial Flower Pot. At 99 Store, we understand the importance of infusing nature's beauty into your surroundings, and our meticulously crafted artificial flower pot allows you to do just that without compromising on style.</p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">vISIT OUR STORE</button></div>
+                                    <div class="col-6"><a class="btn btn-light" role="button" data-bss-hover-animate="flash" href="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" data-bs-target="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" target="_blank" style="background: rgb(254,182,72);color: var(--bs-btn-bg);">vISIT OUR STORE</a></div>
                                     <div class="col-6">
                                         <p class="product-price">₹99.00</p>
                                     </div>
@@ -170,9 +170,9 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <p class="product-description">Introducing the Round Wooden-Style Plastic Wall Clock - Timeless Elegance for Your Home!<br>Enhance your living space with the perfect fusion of rustic charm and modern functionality. Our Round Wooden-Style Plastic Wall Clock from 99 Store is not just a timepiece; it's a statement of style and sophistication.</p>
+                                <p class="product-description">Introducing the Round Wooden-Style Plastic Wall Clock - Timeless Elegance for Your Home! Enhance your living space with the perfect fusion of rustic charm and modern functionality. Our Round Wooden-Style Plastic Wall Clock from 99 Store is not just a timepiece; it's a statement of style and sophistication.</p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">vISIT OUR STORE</button></div>
+                                    <div class="col-6"><a class="btn btn-light" role="button" data-bss-hover-animate="flash" href="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" data-bs-target="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" target="_blank" style="background: rgb(254,182,72);color: var(--bs-btn-bg);">vISIT OUR STORE</a></div>
                                     <div class="col-6">
                                         <p class="product-price">₹99.00</p>
                                     </div>
@@ -188,14 +188,14 @@
                         </div>
                         <div class="row">
                             <div class="col-8">
-                                <h2><a href="#">Artificial Flower Pot</a></h2>
+                                <h2><a href="#">3D LED Desk Lamp</a></h2>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sem sed nisl dignissim, facilisis dapibus lacus vulputate. Sed lacinia lacinia magna. </p>
+                                <p class="product-description">Introducing the 3D LED Lamp - Illuminate Your Space with Unique Elegance!Step into a world of enchanting ambiance with our 3D LED Lamp. At 99 Store, we've combined cutting-edge technology with artistic design to create a lighting experience that transcends the ordinary.</p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">vISIT OUR STORE</button></div>
+                                    <div class="col-6"><a class="btn btn-light" role="button" data-bss-hover-animate="flash" href="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" data-bs-target="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" target="_blank" style="background: rgb(254,182,72);color: var(--bs-btn-bg);">vISIT OUR STORE</a></div>
                                     <div class="col-6">
                                         <p class="product-price">₹99.00</p>
                                     </div>
@@ -218,7 +218,7 @@
                             <div class="col-12">
                                 <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sem sed nisl dignissim, facilisis dapibus lacus vulputate. Sed lacinia lacinia magna. </p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">vISIT OUR STORE</button></div>
+                                    <div class="col-6"><a class="btn btn-light" role="button" data-bss-hover-animate="flash" href="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" data-bs-target="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" target="_blank" style="background: rgb(254,182,72);color: var(--bs-btn-bg);">vISIT OUR STORE</a></div>
                                     <div class="col-6">
                                         <p class="product-price">₹99.00</p>
                                     </div>
@@ -234,14 +234,14 @@
                         </div>
                         <div class="row">
                             <div class="col-8">
-                                <h2><a href="#">Artificial Flower Pot</a></h2>
+                                <h2><a href="#">Soft Yellow Teddy</a></h2>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
                                 <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sem sed nisl dignissim, facilisis dapibus lacus vulputate. Sed lacinia lacinia magna. </p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">vISIT OUR STORE</button></div>
+                                    <div class="col-6"><a class="btn btn-light" role="button" data-bss-hover-animate="flash" href="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" data-bs-target="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" target="_blank" style="background: rgb(254,182,72);color: var(--bs-btn-bg);">vISIT OUR STORE</a></div>
                                     <div class="col-6">
                                         <p class="product-price">₹99.00</p>
                                     </div>
@@ -256,15 +256,15 @@
                             <div class="col-md-12"><img src="assets/img/Products/12%20inch%20gamla.png" width="100%"></div>
                         </div>
                         <div class="row">
-                            <div class="col-8">
-                                <h2><a href="#">Artificial Flower Pot</a></h2>
+                            <div class="col-12">
+                                <h2><a href="#">12 inch Gamla</a></h2>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
                                 <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sem sed nisl dignissim, facilisis dapibus lacus vulputate. Sed lacinia lacinia magna. </p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">vISIT OUR STORE</button></div>
+                                    <div class="col-6"><a class="btn btn-light" role="button" data-bss-hover-animate="flash" href="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" data-bs-target="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" target="_blank" style="background: rgb(254,182,72);color: var(--bs-btn-bg);">vISIT OUR STORE</a></div>
                                     <div class="col-6">
                                         <p class="product-price">₹99.00</p>
                                     </div>
@@ -280,14 +280,14 @@
                         </div>
                         <div class="row">
                             <div class="col-8">
-                                <h2><a href="#">Artificial Flower Pot</a></h2>
+                                <h2><a href="#">Artificial Flower Stick</a></h2>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
                                 <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sem sed nisl dignissim, facilisis dapibus lacus vulputate. Sed lacinia lacinia magna. </p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">vISIT OUR STORE</button></div>
+                                    <div class="col-6"><a class="btn btn-light" role="button" data-bss-hover-animate="flash" href="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" data-bs-target="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" target="_blank" style="background: rgb(254,182,72);color: var(--bs-btn-bg);">vISIT OUR STORE</a></div>
                                     <div class="col-6">
                                         <p class="product-price">₹99.00</p>
                                     </div>
@@ -303,14 +303,14 @@
                         </div>
                         <div class="row">
                             <div class="col-8">
-                                <h2><a href="#">Artificial Flower Pot</a></h2>
+                                <h2><a href="#">Soft Toy</a></h2>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
                                 <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sem sed nisl dignissim, facilisis dapibus lacus vulputate. Sed lacinia lacinia magna. </p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">vISIT OUR STORE</button></div>
+                                    <div class="col-6"><a class="btn btn-light" role="button" data-bss-hover-animate="flash" href="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" data-bs-target="https://maps.app.goo.gl/oK7aEq9VAA1masYm9" target="_blank" style="background: rgb(254,182,72);color: var(--bs-btn-bg);">vISIT OUR STORE</a></div>
                                     <div class="col-6">
                                         <p class="product-price">₹99.00</p>
                                     </div>
@@ -323,14 +323,13 @@
         </div>
         <div style="text-align: center;margin-top: 30px;"><a class="btn border-pretty" role="button" data-aos="zoom-out" style="color:#ce9c95;" href="products.html">vIEW ALL&nbsp;<i class="icon ion-android-arrow-forward"></i></a></div>
     </section>
-    <section id="contact" style="padding-bottom: 5px;padding-top: 30px;"></section>
-    <section id="contact-1">
+    <section id="contact" style="padding-bottom: 5px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 text-center mx-auto">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 data-aos="fade-down" class="section-heading">Let's Get In Touch!</h2>
                     <hr class="my-4">
-                    <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p data-aos="fade-up" class="mb-5">"Your Gift, Your Way - Reach Out for Unmatched Personalized Service!"</p>
                 </div>
             </div>
             <div class="row">
@@ -385,13 +384,16 @@
                 </div>
             </div>
         </div>
-        <div style="padding: 20px;"><iframe allowfullscreen="" frameborder="0" src="https://cdn.bootstrapstudio.io/placeholders/map.html" width="100%" height="400"></iframe></div>
+        <div style="padding: 20px;"><iframe allowfullscreen frameborder="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d229.14684040060604!2d87.0531924!3d23.2303676!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f7af24cc28807b%3A0x5b8658fcee943dcf!2sRaju%2099%20store!5e0!3m2!1sen!2sin!4v1701954049947!5m2!1sen!2sin" width="100%" height="400"></iframe>
+</div>
+    </section>
+    <section id="footer" style="padding: 127px 0px;padding-bottom: 30px;">
         <footer class="text-center">
             <div class="container text-muted py-4 py-lg-5">
                 <ul class="list-inline">
-                    <li class="list-inline-item me-4"><a class="link-secondary" href="#">Web design</a></li>
-                    <li class="list-inline-item me-4"><a class="link-secondary" href="#">Development</a></li>
-                    <li class="list-inline-item"><a class="link-secondary" href="#">Hosting</a></li>
+                    <li class="list-inline-item me-4"><a class="link-secondary" href="#home">Home</a></li>
+                    <li class="list-inline-item me-4"><a class="link-secondary" href="#products">Products</a></li>
+                    <li class="list-inline-item"><a class="link-secondary" href="tel:7318802424">Call Us</a></li>
                 </ul>
                 <ul class="list-inline">
                     <li class="list-inline-item me-4"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
@@ -404,7 +406,7 @@
                             <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"></path>
                         </svg></li>
                 </ul>
-                <p class="mb-0">Copyright © 2023 Brand</p>
+                <p class="mb-0">ariccodesphere© 2023 Brand</p>
             </div>
         </footer>
     </section>
