--- a/products.html
+++ b/products.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
-                    <li class="nav-item"><button class="btn btn-primary" data-bss-hover-animate="pulse" type="button" style="background: rgb(254,182,72);">Call us</button></li>
+                    <li class="nav-item"><a class="btn btn-primary" role="button" data-bss-hover-animate="pulse" style="background: rgb(254,182,72);" href="tel:7318802424">Call us</a></li>
                 </ul>
             </div>
         </div>
