--- a/index.html
+++ b/index.html
@@ -416,6 +416,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
     <script src="assets/js/creative.js"></script>
     <script src="assets/js/Animated-Pretty-Product-List-v12.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2151522445425351"
+     crossorigin="anonymous"></script>
 </body>
 
 </html>
